[tool.poetry]
name = "nu"
version = "0.1.0"
description = "Tools for neutrino oscillation experiment analysis."
authors = ["Aditya Marathe"]
license = "GNU General Public License (Version 3)"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
pandas = "^2.2.2"
dask = "^2024.6.2"
matplotlib = "^3.9.0"
notebook = "^7.2.1"
h5py = "^3.11.0"
joblib = "^1.4.2"
pylint = "^3.2.5"
autopep8 = "^2.3.1"
pydantic = "^2.8.2"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
